4-k8s-examples/10-network-policies/00-workloads.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    purpose: demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    purpose: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      tier: web
  template:
    metadata:
      labels:
        app: frontend
        tier: web
    spec:
      containers:
      - name: alpine
        image: public.ecr.aws/docker/library/alpine:3.22
        command: ["sleep", "infinity"]
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  namespace: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      tier: database
  template:
    metadata:
      labels:
        app: backend
        tier: database
    spec:
      containers:
      - name: alpine
        image: public.ecr.aws/docker/library/alpine:3.22
        command: ["sleep", "infinity"]
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
spec:
  selector:
    app: frontend
    tier: web
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend
spec:
  selector:
    app: backend
    tier: database
  ports:
  - port: 5432
    targetPort: 5432
